RESOLVED FIXED270897
REGRESSION (274816@main): [visionOS] Fullscreen window size does not always match the video's aspect ratio
https://bugs.webkit.org/show_bug.cgi?id=270897
Summary REGRESSION (274816@main): [visionOS] Fullscreen window size does not always m...
Aditya Keerthi
Reported 2024-03-12 22:53:59 PDT
Following 274816@main, when fullscreening an element that contains a video, the fullscreen window is sized using the default fullscreen size (incorrect) rather than using the video's size / aspect ratio.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-03-12 22:54:12 PDT
Aditya Keerthi
Comment 2 2024-03-12 23:10:04 PDT
EWS
Comment 3 2024-03-13 18:12:45 PDT
Committed 276059@main (7f87b7bf71ae): <https://commits.webkit.org/276059@main> Reviewed commits have been landed. Closing PR #25808 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.